--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
-  "name": "@metaquanta/template",
+  "name": "@metaquanta/castcontrold",
   "version": "0.0.1",
-  "description": "",
+  "description": "The Chromecast's missing controller",
   "homepage": "https://metaquanta.com",
   "license": "AGPL-3.0",
-  "repository": "github:metaquanta/",
-  "main": "build/castcontrold",
+  "repository": "github:metaquanta/castcontrold",
   "engines": {
     "node": ">= 14.15 <15"
   },
@@ -13,42 +12,20 @@
   "scripts": {
     "build": "tsc",
     "build:watch": "tsc --watch --preserveWatchOutput",
-    "start": "build/castcontrold.js",
     "lint": "eslint --ext=ts,js src",
-    "format": "prettier --write *",
-    "test": "jest --passWithNoTests",
-    "test:watch": "jest --passWithNoTests --watch",
-    "precommit": "npm-run-all -s lint format test build"
-  },
-  "jest": {
-    "transform": {
-      ".ts": "ts-jest"
-    },
-    "testRegex": "\\.test\\.ts$",
-    "moduleFileExtensions": [
-      "js",
-      "ts"
-    ]
+    "format": "prettier --write *"
   },
   "dependencies": {
-    "castv2": "^0.1.10",
-    "dbus-native": "^0.4.0",
-    "mdns": "^2.7.2",
-    "mdns-js": "^1.0.3"
+    "castv2": "^0.1.10"
   },
   "devDependencies": {
-    "@types/jest": "^26.0.20",
-    "@types/mdns": "^0.0.33",
     "@types/node": "^14.14.20",
     "@typescript-eslint/eslint-plugin": "^4.12.0",
     "@typescript-eslint/parser": "^4.12.0",
     "eslint": "^7.17.0",
     "eslint-config-prettier": "^7.1.0",
     "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-jest": "^24.1.3",
-    "jest": "^26.6.3",
     "prettier": "^2.2.1",
-    "ts-jest": "^26.4.4",
     "typescript": "^4.1.3"
   }
 }
