--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "format": "prettier --write *"
   },
   "dependencies": {
-    "castv2": "^0.1.10"
   },
   "devDependencies": {
     "@types/node": "^14.14.20",
@@ -26,6 +25,7 @@
     "eslint-config-prettier": "^7.1.0",
     "eslint-plugin-import": "^2.22.1",
     "prettier": "^2.2.1",
+    "protobufjs": "~6.10.2",
     "typescript": "^4.1.3"
   }
 }
